Overhaul image alignment between training and inference

--- a/entrack/training_conditional_t.ipynb
+++ b/entrack/training_conditional_t.ipynb
@@ -151,7 +151,10 @@
     "            epochs=config[\"epochs\"],\n",
     "            validation_data=eval_seq,\n",
     "            callbacks=[\n",
-    "                TensorBoard(log_dir=save_dir, write_graph=False),\n",
+    "                TensorBoard(log_dir=save_dir,\n",
+    "                            write_graph=False,\n",
+    "                            update_freq=5*config[\"batch_size\"],\n",
+    "                            profile_batch=0),\n",
     "                ModelCheckpoint(os.path.join(save_dir, \"weights.{epoch:02d}-{val_loss:.2f}.h5\"),\n",
     "                                save_best_only=True),\n",
     "                # EarlyStopping(min_delta=0.05, patience=10, restore_best_weights=True, verbose=1)\n",
@@ -208,9 +211,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"entrack_conditional\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "inputs (InputLayer)             [(None, 408)]        0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_12 (Dense)                (None, 1024)         418816      inputs[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_13 (Dense)                (None, 1024)         1049600     dense_12[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_14 (Dense)                (None, 512)          524800      dense_13[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_16 (Dense)                (None, 512)          524800      dense_13[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_15 (Dense)                (None, 3)            1539        dense_14[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_17 (Dense)                (None, 1)            513         dense_16[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "mu (Lambda)                     (None, 3)            0           dense_15[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "kappa (Lambda)                  (None,)              0           dense_17[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "distribution_lambda_2 (Distribu ((None, 3), (None, 3 0           mu[0][0]                         \n",
+      "                                                                 kappa[0][0]                      \n",
+      "==================================================================================================\n",
+      "Total params: 2,520,068\n",
+      "Trainable params: 2,520,068\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n",
+      "Epoch 1/10\n",
+      "5965/5965 [==============================] - 92s 15ms/step - loss: -1.6179 - val_loss: -1.5599\n",
+      "Epoch 2/10\n",
+      "5965/5965 [==============================] - 76s 13ms/step - loss: -1.8533 - val_loss: -1.5239\n",
+      "Epoch 3/10\n",
+      "5965/5965 [==============================] - 80s 13ms/step - loss: -1.9368 - val_loss: -1.5994\n",
+      "Epoch 4/10\n",
+      "5965/5965 [==============================] - 76s 13ms/step - loss: -1.9923 - val_loss: -1.5986\n",
+      "Epoch 5/10\n",
+      "5965/5965 [==============================] - 80s 13ms/step - loss: -2.0351 - val_loss: -1.6044\n",
+      "Epoch 6/10\n",
+      "5965/5965 [==============================] - 79s 13ms/step - loss: -2.0690 - val_loss: -1.5896\n",
+      "Epoch 7/10\n",
+      "5965/5965 [==============================] - 80s 13ms/step - loss: -2.0994 - val_loss: -1.6013\n",
+      "Epoch 8/10\n",
+      "5965/5965 [==============================] - 80s 13ms/step - loss: -2.1229 - val_loss: -1.6648\n",
+      "Epoch 9/10\n",
+      "5965/5965 [==============================] - 78s 13ms/step - loss: -2.1454 - val_loss: -1.6230\n",
+      "Epoch 10/10\n",
+      "5965/5965 [==============================] - 81s 14ms/step - loss: -2.1656 - val_loss: -1.6171\n",
+      "Saving ../models/entrack_conditional/07371985349211c04c0aee0a48c84a9e/config.yml\n",
+      "Saving ../models/entrack_conditional/07371985349211c04c0aee0a48c84a9e/model.h5\n"
+     ]
+    }
+   ],
    "source": [
     "model = train_model(config)"
    ]
