--- a/fiber_resampling.ipynb
+++ b/fiber_resampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
     "    tractogram = Tractogram(\n",
     "        streamlines=position,\n",
     "        data_per_point=data_per_point,\n",
-    "        affine_to_rasmm=trk_file.tractogram.affine_to_rasmm\n",
+    "        affine_to_rasmm=np.eye(4) # Fiber coordinates are already in rasmm space!\n",
     "    )\n",
     "    \n",
     "    os.makedirs(save_dir, exist_ok=True)\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,20 +168,20 @@
     "    subject=\"917255\",\n",
     "    bundle=\"merged_w1\",\n",
     "    n_pts=\"auto\",\n",
-    "    smoothing=6,\n",
+    "    smoothing=5,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving subjects/917255/resampled_fibers/merged_w1_smooth=6_npts=auto.trk\n"
+      "Saving subjects/917255/resampled_fibers/merged_w1_smooth=5_npts=auto.trk\n"
      ]
     }
    ],
@@ -191,13 +191,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fibers = nib.streamlines.load(\n",
+    "trk_file = nib.streamlines.load(\n",
     "    os.path.join(\"subjects\", config[\"subject\"], \"tracts\", config[\"bundle\"] + \".trk\")\n",
-    ").tractogram.streamlines"
+    ")\n",
+    "\n",
+    "fibers = trk_file.tractogram.streamlines"
    ]
   },
   {
