--- a/generate_conditional_samples_t.ipynb
+++ b/generate_conditional_samples_t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,21 @@
     "        print(\"Samples with this config have been created already:\\n{}\".format(save_dir))\n",
     "        return None, None\n",
     "    \n",
-    "    tracts = nib.streamlines.load(trk_path).tractogram\n",
+    "    tracts = nib.streamlines.load(trk_path).tractogram # fiber coordinates in rasmm\n",
     "    assert tracts.data_per_point is not None\n",
     "    assert \"t\" in tracts.data_per_point\n",
     "    \n",
-    "    dwi_img = ni.load_image(dwi_path)\n",
-    "    xyz2ijk = lambda r: dwi_img.coordmap.inverse()([r[0], r[1], r[2], 0])[:3]\n",
+    "    dwi_img = nib.load(dwi_path)\n",
+    "    dwi_img = nib.funcs.as_closest_canonical(dwi_img)\n",
+    "    \n",
+    "    inv_affine = np.linalg.inv(dwi_img.affine)\n",
+    "    xyz2ijk = lambda r: inv_affine.dot([r[0], r[1], r[2], 1])[:3]\n",
+    "    \n",
     "    dwi = dwi_img.get_data()\n",
     "\n",
+    "    if config[\"reverse_samples\"] and config[\"max_n_samples\"] % 2 != 0:\n",
+    "        raise ValueError(\"max_n_samples can not be an odd number for reverse_samples == True.\")\n",
+    "    \n",
     "    n_fibers = len(tracts)\n",
     "    fiber_lengths = [len(f) for f in tracts]\n",
     "    n_samples = np.sum(fiber_lengths) - 2 * n_fibers\n",
@@ -137,7 +144,7 @@
     "\n",
     "    save_path = os.path.join(save_dir, \"samples.npz\")\n",
     "    \n",
-    "    print(\"Saving {}\".format(save_path))\n",
+    "    print(\"\\nSaving {}\".format(save_path))\n",
     "    np.savez_compressed(save_path, inputs=inputs, outputs=outputs)\n",
     "    \n",
     "    config[\"n_samples\"] = int(n_samples)\n",
@@ -151,38 +158,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = dict(\n",
-    "    subject=\"992774\",\n",
+    "    subject=\"917255\",\n",
     "    sample_type=\"conditional_t\",\n",
-    "    dwi_path = \"fod.nii.gz\",\n",
+    "    dwi_path = \"fod_norm.nii.gz\",\n",
     "    trk_path = \"resampled_fibers/merged_w1_smooth=5_npts=auto.trk\",\n",
-    "    block_size = 3,\n",
+    "    block_size = 1,\n",
     "    reverse_samples = True,\n",
-    "    max_n_samples = 1000,\n",
+    "    max_n_samples = 511,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Samples with this config have been created already:\n",
-      "subjects/992774/samples/40b9069c14f30aefc8fc14e9143964b5\n"
+     "ename": "ValueError",
+     "evalue": "max_n_samples can not be an odd number for reverse_samples == True.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-65-b3d6ffdb7db5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-59-2c681973e090>\u001b[0m in \u001b[0;36mcreate_samples\u001b[0;34m(config)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"reverse_samples\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"max_n_samples\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"max_n_samples can not be an odd number for reverse_samples == True.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0mn_fibers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtracts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: max_n_samples can not be an odd number for reverse_samples == True."
      ]
     }
    ],
    "source": [
     "inputs, outputs = create_samples(config)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
