--- a/trk2seeds.ipynb
+++ b/trk2seeds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,8 @@
     "    trk_path = os.path.join(subject_dir, config[\"trk_path\"])\n",
     "    \n",
     "    hasher = md5()\n",
-    "    hasher.update(open(trk_path, \"rb\").read())\n",
-    "    hasher.update(str(config[\"rand_radius\"]).encode())\n",
-    "    hasher.update(str(config[\"rand_samples\"]).encode())\n",
+    "    for v in config.values():\n",
+    "        hasher.update(str(v).encode())\n",
     "    \n",
     "    save_dir = os.path.join(subject_dir, \"seeds\", hasher.hexdigest())\n",
     "    \n",
@@ -39,7 +38,7 @@
     "        print(\"Seeds with this config have been created already:\\n{}\".format(save_dir))\n",
     "        return\n",
     "    \n",
-    "    tracts = nib.streamlines.load(trk_path).tractogram.streamlines\n",
+    "    tracts = nib.streamlines.load(trk_path).tractogram.streamlines # voxel-center coords\n",
     "    \n",
     "    seeds = []\n",
     "    for fiber in tracts:\n",
@@ -56,10 +55,12 @@
     "    \n",
     "    all_seeds = np.vstack([seeds, rand_seeds])\n",
     "    \n",
+    "    all_seeds = np.hstack([all_seeds, np.ones((len(all_seeds), 1))]) # Additional dimension for 4x4 affine\n",
+    "    \n",
     "    os.makedirs(save_dir, exist_ok=True)\n",
     "    save_path = os.path.join(save_dir, \"seeds.npy\")\n",
     "    print(\"Saving {}\".format(save_path))\n",
-    "    np.save(save_path, all_seeds)\n",
+    "    np.save(save_path, all_seeds) # We don't need to shift by +0.5 vox, because we load again with numpy\n",
     "    \n",
     "    config[\"n_seeds\"] = len(all_seeds)\n",
     "    config_path = os.path.join(save_dir, \"config\" + \".yml\")\n",
@@ -72,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "config=dict(\n",
-    "    subject=\"992774\",\n",
-    "    trk_path=\"resampled_fibers/CC_smooth=5_npts=auto.trk\",\n",
+    "    subject=\"ismrm_rpe\",\n",
+    "    trk_path=\"tracts/merged.trk\",\n",
     "    rand_radius=1.0,\n",
     "    rand_samples=1\n",
     ")"
@@ -86,15 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving subjects/992774/seeds/bcc2e734e49c597e25ece8a3d499d060/seeds.npy\n",
-      "Saving subjects/992774/seeds/bcc2e734e49c597e25ece8a3d499d060/config.yml\n"
+      "Saving subjects/ismrm_rpe/seeds/6c78e951274fe8b719147ec639daddbe/seeds.npy\n",
+      "Saving subjects/ismrm_rpe/seeds/6c78e951274fe8b719147ec639daddbe/config.yml\n"
      ]
     }
    ],
