Change trk2seeds to output a .trk file instead of .npy

--- a/trk2seeds.ipynb
+++ b/trk2seeds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,15 @@
     "import numpy as np\n",
     "import yaml\n",
     "\n",
-    "from hashlib import md5"
+    "from hashlib import md5\n",
+    "\n",
+    "from nibabel.streamlines import ArraySequence, Tractogram\n",
+    "from nibabel.streamlines.trk import TrkFile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,64 +41,63 @@
     "        print(\"Seeds with this config have been created already:\\n{}\".format(save_dir))\n",
     "        return\n",
     "    \n",
-    "    tracts = nib.streamlines.load(trk_path).tractogram.streamlines # voxel-center coords\n",
+    "    trk_file = nib.streamlines.load(trk_path)\n",
     "    \n",
     "    seeds = []\n",
-    "    for fiber in tracts:\n",
-    "        seeds.append(fiber[0])\n",
-    "        seeds.append(fiber[-1])\n",
+    "    for fiber in trk_file.tractogram.streamlines:\n",
+    "        seeds.append([fiber[0]])\n",
+    "        seeds.append([fiber[-1]])\n",
     "    seeds = np.array(seeds)\n",
     "    \n",
-    "    rand_shifts = np.random.uniform(-config[\"rand_radius\"], config[\"rand_radius\"],\n",
-    "                                    size=(len(seeds), config[\"rand_samples\"], 3)\n",
-    "    )\n",
-    "    \n",
-    "    rand_seeds = rand_shifts + seeds.reshape(-1, 1, 3)\n",
-    "    rand_seeds = rand_seeds.reshape(-1, 3)\n",
-    "    \n",
-    "    all_seeds = np.vstack([seeds, rand_seeds])\n",
-    "    \n",
-    "    all_seeds = np.hstack([all_seeds, np.ones((len(all_seeds), 1))]) # Additional dimension for 4x4 affine\n",
+    "    if config[\"rand_samples\"] > 0:\n",
+    "        rand_shifts = np.random.uniform(-config[\"rand_radius\"], config[\"rand_radius\"],\n",
+    "                                        size=(len(seeds), config[\"rand_samples\"], 3)\n",
+    "        )\n",
+    "        rand_seeds = rand_shifts + seeds.reshape(-1, 1, 3)\n",
+    "        rand_seeds = rand_seeds.reshape(-1, 3)\n",
+    "        seeds = np.vstack([seeds, rand_seeds])\n",
+    "      \n",
+    "    tractogram = Tractogram(ArraySequence(seeds), affine_to_rasmm=np.eye(4))\n",
     "    \n",
     "    os.makedirs(save_dir, exist_ok=True)\n",
-    "    save_path = os.path.join(save_dir, \"seeds.npy\")\n",
+    "    save_path = os.path.join(save_dir, \"seeds.trk\")\n",
     "    print(\"Saving {}\".format(save_path))\n",
-    "    np.save(save_path, all_seeds) # We don't need to shift by +0.5 vox, because we load again with numpy\n",
+    "    TrkFile(tractogram, trk_file.header).save(save_path)\n",
     "    \n",
-    "    config[\"n_seeds\"] = len(all_seeds)\n",
+    "    config[\"n_seeds\"] = len(seeds)\n",
     "    config_path = os.path.join(save_dir, \"config\" + \".yml\")\n",
     "    print(\"Saving {}\".format(config_path))\n",
     "    with open(config_path, \"w\") as file:\n",
     "            yaml.dump(config, file, default_flow_style=False)\n",
     "    \n",
-    "    return all_seeds"
+    "    return seeds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "config=dict(\n",
-    "    subject=\"ismrm_rpe\",\n",
-    "    trk_path=\"tracts/merged.trk\",\n",
-    "    rand_radius=1.0,\n",
-    "    rand_samples=1\n",
+    "    subject=\"992774\",\n",
+    "    trk_path=\"tracts/CA.trk\",\n",
+    "    rand_radius=1.0, # in mm\n",
+    "    rand_samples=0,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving subjects/ismrm_rpe/seeds/6c78e951274fe8b719147ec639daddbe/seeds.npy\n",
-      "Saving subjects/ismrm_rpe/seeds/6c78e951274fe8b719147ec639daddbe/config.yml\n"
+      "Saving subjects/992774/seeds/4c74deb7a7d812284c1edb8197b24a35/seeds.trk\n",
+      "Saving subjects/992774/seeds/4c74deb7a7d812284c1edb8197b24a35/config.yml\n"
      ]
     }
    ],
