Add saving the header in fiber_resampling

--- a/fiber_resampling.ipynb
+++ b/fiber_resampling.ipynb
@@ -153,7 +153,7 @@
     "    \n",
     "    os.makedirs(save_dir, exist_ok=True)\n",
     "    print(\"Saving {}\".format(save_path))\n",
-    "    TrkFile(tractogram).save(save_path)\n",
+    "    TrkFile(tractogram, trk_file.header).save(save_path)\n",
     "    \n",
     "    return tractogram"
    ]
