Rearrange code in generate_conditional_samples_t

--- a/generate_conditional_samples_t.ipynb
+++ b/generate_conditional_samples_t.ipynb
@@ -39,14 +39,6 @@
    "source": [
     "def create_samples(config):\n",
     "    \"\"\"\"\"\"\n",
-    "    if config[\"block_size\"] % 2 == 0:\n",
-    "        raise ValueError(\"block_size must be an odd number (1, 3, 5,...)\")\n",
-    "    \n",
-    "    subject_dir = os.path.join(\"subjects\", config[\"subject\"])\n",
-    "    \n",
-    "    trk_path = os.path.join(subject_dir, config[\"trk_path\"])\n",
-    "    dwi_path = os.path.join(subject_dir, config[\"dwi_path\"])\n",
-    "    \n",
     "    hasher = md5()\n",
     "    for v in config.values():\n",
     "        hasher.update(str(v).encode())\n",
@@ -56,21 +48,31 @@
     "        print(\"Samples with this config have been created already:\\n{}\".format(save_dir))\n",
     "        return None, None\n",
     "    \n",
-    "    tracts = nib.streamlines.load(trk_path).tractogram # fiber coordinates in rasmm\n",
-    "    assert tracts.data_per_point is not None\n",
-    "    assert \"t\" in tracts.data_per_point\n",
-    "    \n",
-    "    dwi_img = nib.load(dwi_path)\n",
-    "    dwi_img = nib.funcs.as_closest_canonical(dwi_img)\n",
-    "    \n",
-    "    inv_affine = np.linalg.inv(dwi_img.affine)\n",
-    "    xyz2ijk = lambda r: inv_affine.dot([r[0], r[1], r[2], 1])[:3]\n",
-    "    \n",
-    "    dwi = dwi_img.get_data()\n",
-    "\n",
+    "    if config[\"block_size\"] % 2 == 0:\n",
+    "        raise ValueError(\"block_size must be an odd number (1, 3, 5,...)\")\n",
+    "        \n",
     "    if config[\"reverse_samples\"] and config[\"max_n_samples\"] % 2 != 0:\n",
     "        raise ValueError(\"max_n_samples can not be an odd number for reverse_samples == True.\")\n",
     "    \n",
+    "    subject_dir = os.path.join(\"subjects\", config[\"subject\"])\n",
+    "    \n",
+    "    trk_path = os.path.join(subject_dir, config[\"trk_path\"])\n",
+    "    trk_file = nib.streamlines.load(trk_path)\n",
+    "    assert trk_file.tractogram.data_per_point is not None\n",
+    "    assert \"t\" in trk_file.tractogram.data_per_point\n",
+    "    \n",
+    "    #=================================================\n",
+    "    \n",
+    "    dwi_path = os.path.join(subject_dir, config[\"dwi_path\"])\n",
+    "    dwi_img = nib.load(dwi_path)\n",
+    "    dwi_img = nib.funcs.as_closest_canonical(dwi_img)\n",
+    "    dwi_aff = dwi_img.affine\n",
+    "    dwi_affi = np.linalg.inv(dwi_aff)\n",
+    "    dwi_xyz2ijk = lambda r: dwi_affi.dot([r[0], r[1], r[2], 1])[:3]\n",
+    "    dwi = dwi_img.get_data()\n",
+    "\n",
+    "    tracts = trk_file.tractogram # fiber coordinates in rasmm\n",
+    "\n",
     "    n_fibers = len(tracts)\n",
     "    fiber_lengths = [len(f) for f in tracts]\n",
     "    n_samples = np.sum(fiber_lengths) - 2 * n_fibers\n",
@@ -82,14 +84,15 @@
     "    perm = np.random.permutation(len(tracts))\n",
     "    tracts = tracts[perm]\n",
     "    \n",
+    "    #=================================================\n",
+    "    \n",
     "    inputs = []\n",
     "    outputs = []\n",
     "    done=False\n",
     "    for fi, f in enumerate(tracts):  \n",
     "        for i, r in enumerate(f.streamline[1:-1]): # Exclude end points for conditional model\n",
-    "            \n",
     "            try:\n",
-    "                idx = xyz2ijk(r) # anchor idx\n",
+    "                idx = dwi_xyz2ijk(r) # anchor idx\n",
     "                IDX = np.round(idx).astype(int)\n",
     "                \n",
     "                values = np.zeros([3, 3, 3,\n",
