Fix Unbound Reference Error

--- a/generate_conditional_samples_t.ipynb
+++ b/generate_conditional_samples_t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,8 @@
     "    hasher = md5()\n",
     "    for v in config.values():\n",
     "        hasher.update(str(v).encode())\n",
+    "    \n",
+    "    subject_dir = os.path.join(\"subjects\", config[\"subject\"])\n",
     "    \n",
     "    save_dir = os.path.join(subject_dir, \"samples\", hasher.hexdigest())\n",
     "    if os.path.exists(save_dir):\n",
@@ -53,8 +55,6 @@
     "        \n",
     "    if config[\"reverse_samples\"] and config[\"max_n_samples\"] % 2 != 0:\n",
     "        raise ValueError(\"max_n_samples can not be an odd number for reverse_samples == True.\")\n",
-    "    \n",
-    "    subject_dir = os.path.join(\"subjects\", config[\"subject\"])\n",
     "    \n",
     "    trk_path = os.path.join(subject_dir, config[\"trk_path\"])\n",
     "    trk_file = nib.streamlines.load(trk_path)\n",
@@ -161,36 +161,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = dict(\n",
-    "    subject=\"917255\",\n",
+    "    subject=\"992774\",\n",
     "    sample_type=\"conditional_t\",\n",
     "    dwi_path = \"fod_norm.nii.gz\",\n",
-    "    trk_path = \"resampled_fibers/merged_w1_smooth=5_npts=auto.trk\",\n",
-    "    block_size = 1,\n",
+    "    trk_path = \"resampled_fibers/merged_w5_smooth=5_npts=auto.trk\",\n",
+    "    block_size = 3,\n",
     "    reverse_samples = True,\n",
-    "    max_n_samples = 511,\n",
+    "    max_n_samples = 10000,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "max_n_samples can not be an odd number for reverse_samples == True.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-65-b3d6ffdb7db5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-59-2c681973e090>\u001b[0m in \u001b[0;36mcreate_samples\u001b[0;34m(config)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"reverse_samples\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"max_n_samples\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"max_n_samples can not be an odd number for reverse_samples == True.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0mn_fibers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtracts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: max_n_samples can not be an odd number for reverse_samples == True."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 100%\n",
+      "Saving subjects/992774/samples/2392afe9c0d78631915fa44f37a48d90/samples.npz\n",
+      "Saving subjects/992774/samples/2392afe9c0d78631915fa44f37a48d90/config.yml\n"
      ]
     }
    ],
