rnn updates and req.txt

--- a/rnn_model/training_rnn.ipynb
+++ b/rnn_model/training_rnn.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,10 +93,8 @@
     "    sample_path = os.path.join(config[\"sample_dir\"], \"samples.npz\")\n",
     "    \n",
     "    hasher = md5()\n",
-    "    hasher.update(open(sample_path, \"rb\").read())\n",
-    "    hasher.update(str(config[\"max_n_samples\"]).encode())\n",
-    "    hasher.update(str(config[\"batch_size\"]).encode())\n",
-    "    hasher.update(str(config[\"epochs\"]).encode())\n",
+    "    for v in config.values():\n",
+    "        hasher.update(str(v).encode())\n",
     "    \n",
     "    save_dir = os.path.join(\"..\", \"models\", config[\"model_name\"], hasher.hexdigest())\n",
     "    \n",
@@ -113,14 +111,14 @@
     "    def model_fn(inputs):\n",
     "        \n",
     "        x = GRU(config['hidden_sizes'][0], return_sequences=True)(inputs)\n",
-    "        for hidden_size in config['hidden_sizes'][1:]:\n",
-    "            x = GRU(hidden_size, return_sequences=True)(x)\n",
+    "        if len(config['hidden_sizes']) > 1:\n",
+    "            for hidden_size in config['hidden_sizes'][1:-1]:\n",
+    "                x = GRU(hidden_size, return_sequences=True)(x)\n",
+    "            x = GRU(config['hidden_sizes'][-1], return_sequences=True)(x)\n",
     "        x = Dense(output_shape, activation='linear')(x)\n",
     "        return x\n",
-    "\n",
     "    model = tf.keras.Model(inputs, model_fn(inputs), name=config[\"model_name\"])\n",
     "    model.summary()\n",
-    "    \n",
     "    \n",
     "    \n",
     "    def negative_log_likelihood(observed_y, predicted_distribution):\n",
@@ -175,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +182,7 @@
     "    model_name=\"rnn_pd\",\n",
     "    hidden_sizes=[500, 500],\n",
     "    time_step=1,\n",
-    "    sample_dir=\"../subjects/992774/samples/e09d97e5447d8a380d51369e4e4f692f\",\n",
+    "    sample_dir=\"../subjects/992774/samples/79c7b0cd74eea9d56bb9b218cd9f392b\",\n",
     "    max_n_samples=np.inf,\n",
     "    batch_size = 128,\n",
     "    epochs = 10,\n",
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -206,38 +204,38 @@
       "=================================================================\n",
       "inputs (InputLayer)          [(128, 3, 408)]           0         \n",
       "_________________________________________________________________\n",
-      "gru_14 (GRU)                 (128, 3, 500)             1365000   \n",
+      "gru_4 (GRU)                  (128, 3, 500)             1365000   \n",
       "_________________________________________________________________\n",
-      "gru_15 (GRU)                 (128, 3, 500)             1503000   \n",
+      "gru_5 (GRU)                  (128, 3, 500)             1503000   \n",
       "_________________________________________________________________\n",
-      "dense_6 (Dense)              (128, 3, 3)               1503      \n",
+      "dense_1 (Dense)              (128, 3, 3)               1503      \n",
       "=================================================================\n",
       "Total params: 2,869,503\n",
       "Trainable params: 2,869,503\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/10\n",
-      "2/2 [==============================] - 1s 319ms/step - loss: 0.3220\n",
+      "2/2 [==============================] - 1s 334ms/step - loss: 0.3016\n",
       "Epoch 2/10\n",
-      "2/2 [==============================] - 0s 250ms/step - loss: 0.1674\n",
+      "2/2 [==============================] - 1s 290ms/step - loss: 0.1618\n",
       "Epoch 3/10\n",
-      "2/2 [==============================] - 0s 224ms/step - loss: 0.1044\n",
+      "2/2 [==============================] - 1s 255ms/step - loss: 0.0917\n",
       "Epoch 4/10\n",
-      "2/2 [==============================] - 0s 213ms/step - loss: 0.0935\n",
+      "2/2 [==============================] - 0s 230ms/step - loss: 0.0868\n",
       "Epoch 5/10\n",
-      "2/2 [==============================] - 0s 226ms/step - loss: 0.0788\n",
+      "2/2 [==============================] - 0s 242ms/step - loss: 0.0858\n",
       "Epoch 6/10\n",
-      "2/2 [==============================] - 0s 200ms/step - loss: 0.0645\n",
+      "2/2 [==============================] - 0s 240ms/step - loss: 0.0636\n",
       "Epoch 7/10\n",
-      "2/2 [==============================] - 0s 214ms/step - loss: 0.0501\n",
+      "2/2 [==============================] - 0s 246ms/step - loss: 0.0483\n",
       "Epoch 8/10\n",
-      "2/2 [==============================] - 0s 204ms/step - loss: 0.0503\n",
+      "2/2 [==============================] - 0s 249ms/step - loss: 0.0447\n",
       "Epoch 9/10\n",
-      "2/2 [==============================] - 0s 234ms/step - loss: 0.0446\n",
+      "2/2 [==============================] - 0s 241ms/step - loss: 0.0412\n",
       "Epoch 10/10\n",
-      "2/2 [==============================] - 0s 211ms/step - loss: 0.0368\n",
-      "Saving ../models/rnn_pd/cc1276f6bdc33f83d085f09884ced9df/config.yml\n",
-      "Saving ../models/rnn_pd/cc1276f6bdc33f83d085f09884ced9df/model.h5\n"
+      "2/2 [==============================] - 0s 230ms/step - loss: 0.0377\n",
+      "Saving ../models/rnn_pd/852bf58cef6aed0654a209b93a02a152/config.yml\n",
+      "Saving ../models/rnn_pd/852bf58cef6aed0654a209b93a02a152/model.h5\n"
      ]
     }
    ],
