--- a/entrack/inference_t.ipynb
+++ b/entrack/inference_t.ipynb
@@ -91,11 +91,8 @@
     "    input_shape = model.layers[0].get_output_at(0).get_shape().as_list()[-1]\n",
     "    block_size = int(np.cbrt(input_shape / dwi.shape[-1]))\n",
     "    \n",
-    "    def ijk2xyz(indices):\n",
-    "        return dwi_aff2.dot(indices.T).T\n",
-    "    \n",
-    "    def xyz2ijk(coords, snap=False):\n",
-    "        ijk = dwi_affi2.dot(coords.T).T\n",
+    "    def xyz2ijk(coords, snap=False, shift=False):\n",
+    "        ijk = dwi_affi2.dot(coords.T).T + 0.5\n",
     "        if snap:\n",
     "            ijk = np.round(ijk).astype(int)\n",
     "        return ijk\n",
@@ -108,7 +105,7 @@
     "                scalar_img = nib.load(os.path.join(subject_dir, config[\"terminator\"][0]))\n",
     "                self.scalar = scalar_img.get_data()\n",
     "                affi = np.linalg.inv(scalar_img.affine)\n",
-    "                self.xyz2ijk = lambda xyz: np.round(affi.dot(xyz.T).T).astype(int)\n",
+    "                self.xyz2ijk = lambda xyz: np.round(affi.dot(xyz.T).T + 0.5).astype(int)\n",
     "            else:\n",
     "                raise NotImplementedError # TODO: Implement termination model\n",
     "            self.threshold = config[\"terminator\"][1]\n",
@@ -137,7 +134,7 @@
     "                peak_img = nib.load(os.path.join(subject_dir, config[\"prior\"]))\n",
     "                self.peak = peak_img.get_data()\n",
     "                affi = np.linalg.inv(peak_img.affine)\n",
-    "                self.xyz2ijk = lambda xyz: np.round(affi.dot(xyz.T).T).astype(int)\n",
+    "                self.xyz2ijk = lambda xyz: np.round(affi.dot(xyz.T).T + 0.5).astype(int)\n",
     "            elif \".h5\" in config[\"prior\"]:\n",
     "                raise NotImplementedError # TODO: Implement prior model\n",
     "                \n",
@@ -165,7 +162,7 @@
     "    for i in range(config[\"max_steps\"]):\n",
     "        t0 = time()\n",
     "        \n",
-    "        ijk = xyz2ijk(xyz[:,-1,:], snap=True) # Get coords of latest segement for each fiber \n",
+    "        ijk = xyz2ijk(xyz[:,-1,:], snap=True, shift=True) # Get coords of latest segement for each fiber \n",
     "\n",
     "        d = np.zeros([len(ijk), block_size, block_size, block_size, dwi.shape[-1]])\n",
     "\n",
@@ -339,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,13 +347,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inwm=0\n",
+    "for seed in seed_file.tractogram.streamlines:\n",
+    "    ijk = np.round(affi.dot(np.hstack([seed[0], [1]]))[:3] + 0.5).astype(int)\n",
+    "    inwm += wm_img[ijk[0],ijk[1],ijk[2]] >= 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9768002275074463"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inwm / len(seed_file.tractogram.streamlines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "ingm=0\n",
     "for seed in seed_file.tractogram.streamlines:\n",
-    "    ijk = np.round(affi.dot(np.hstack([seed[0], [1]]))[:3]).astype(int)\n",
+    "    ijk = np.round(affi.dot(np.hstack([seed[0], [1]]))[:3] + 0.5).astype(int)\n",
     "    ingm += wm_img[ijk[0],ijk[1],ijk[2]] < 0.1"
    ]
   },
@@ -382,16 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.16302455184525502"
+       "0.02319977249255362"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,28 +442,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "out=0\n",
     "for seed in seed_file.tractogram.streamlines:\n",
-    "    ijk = np.round(affi.dot(np.hstack([seed[0], [1]]))[:3]).astype(int)\n",
+    "    ijk = np.round(affi.dot(np.hstack([seed[0], [1]]))[:3]+0.5).astype(int)\n",
     "    out += brain_img[ijk[0],ijk[1],ijk[2]] < 0.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.07090149825627516"
+       "0.06702239651155249"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,29 +481,6 @@
     "roi_file = nib.load(\"../scoring/scoring_data/masks/all_rois_125.nii.gz\")\n",
     "roi_img = roi_file.get_data()\n",
     "roi_affi = np.linalg.inv(roi_file.affine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.8, -0. , -0. ,  0.3],\n",
-       "       [-0. , -0.8, -0. ,  0.4],\n",
-       "       [ 0. ,  0. ,  0.8,  0.3],\n",
-       "       [ 0. ,  0. ,  0. ,  1. ]])"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "roi_affi"
    ]
   },
   {
@@ -539,48 +545,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.91421956"
+       "0.758534"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.median(wm_img[roi_img > 0.1])"
+    "np.mean(wm_img[roi_img > 0.1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "inroi=0\n",
     "for seed in seed_file.tractogram.streamlines:\n",
     "    ijk = np.round(roi_affi.dot(np.hstack([seed[0], [1]]))[:3] + 0.5).astype(int)\n",
-    "    inroi += roi_img[ijk[0],ijk[1],ijk[2]] > 0.1"
+    "    inroi += roi_img[ijk[0],ijk[1],ijk[2]] > 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9353499673207506"
+       "0.9604206892078649"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,21 +605,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
