--- a/entrack/training_conditional_t.ipynb
+++ b/entrack/training_conditional_t.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
     "\n",
     "    train_seq = conditional_samples(config[\"train_dir\"], config[\"batch_size\"],\n",
     "                                    max_n_samples=config[\"max_n_samples\"])\n",
-    "    eval_seq = conditional_samples(config[\"eval_dir\"], istraining=False)\n",
+    "    #eval_seq = conditional_samples(config[\"eval_dir\"], istraining=False)\n",
     "    try:\n",
     "        no_exception = True\n",
     "\n",
@@ -149,14 +149,14 @@
     "        train_history = model.fit_generator(\n",
     "            train_seq,\n",
     "            epochs=config[\"epochs\"],\n",
-    "            validation_data=eval_seq,\n",
+    "            #validation_data=eval_seq,\n",
     "            callbacks=[\n",
     "                TensorBoard(log_dir=save_dir,\n",
     "                            write_graph=False,\n",
     "                            update_freq=5*config[\"batch_size\"],\n",
     "                            profile_batch=0),\n",
-    "                ModelCheckpoint(os.path.join(save_dir, \"weights.{epoch:02d}-{val_loss:.2f}.h5\"),\n",
-    "                                save_best_only=True),\n",
+    "                #ModelCheckpoint(os.path.join(save_dir, \"weights.{epoch:02d}-{val_loss:.2f}.h5\"),\n",
+    "                #                save_best_only=True),\n",
     "                # EarlyStopping(min_delta=0.05, patience=10, restore_best_weights=True, verbose=1)\n",
     "            ],\n",
     "            max_queue_size=2*config[\"batch_size\"],\n",
@@ -195,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = dict(\n",
     "    model_name=\"entrack_conditional\",\n",
-    "    train_dir=\"../subjects/917255/samples/462c43d3c41d74cf9fad8d4e2802695f\",\n",
-    "    eval_dir=\"../subjects/992774/samples/0c7f800138a28ef0840333930880d857\",\n",
+    "    train_dir=\"../subjects/992774/samples/2392afe9c0d78631915fa44f37a48d90\",\n",
+    "    #eval_dir=\"../subjects/992774/samples/0c7f800138a28ef0840333930880d857\",\n",
     "    max_n_samples=np.inf,\n",
     "    batch_size = 256,\n",
     "    epochs = 10,\n",
@@ -211,9 +211,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1021 19:00:22.246206 140129666033408 deprecation.py:323] From /local/home/vwegmayr/miniconda2/envs/thesis/lib/python3.6/site-packages/tensorflow_probability/python/distributions/von_mises_fisher.py:312: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -224,23 +234,23 @@
       "==================================================================================================\n",
       "inputs (InputLayer)             [(None, 408)]        0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dense_12 (Dense)                (None, 1024)         418816      inputs[0][0]                     \n",
+      "dense (Dense)                   (None, 1024)         418816      inputs[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dense_13 (Dense)                (None, 1024)         1049600     dense_12[0][0]                   \n",
+      "dense_1 (Dense)                 (None, 1024)         1049600     dense[0][0]                      \n",
       "__________________________________________________________________________________________________\n",
-      "dense_14 (Dense)                (None, 512)          524800      dense_13[0][0]                   \n",
+      "dense_2 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_16 (Dense)                (None, 512)          524800      dense_13[0][0]                   \n",
+      "dense_4 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_15 (Dense)                (None, 3)            1539        dense_14[0][0]                   \n",
+      "dense_3 (Dense)                 (None, 3)            1539        dense_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_17 (Dense)                (None, 1)            513         dense_16[0][0]                   \n",
+      "dense_5 (Dense)                 (None, 1)            513         dense_4[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "mu (Lambda)                     (None, 3)            0           dense_15[0][0]                   \n",
+      "mu (Lambda)                     (None, 3)            0           dense_3[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "kappa (Lambda)                  (None,)              0           dense_17[0][0]                   \n",
+      "kappa (Lambda)                  (None,)              0           dense_5[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "distribution_lambda_2 (Distribu ((None, 3), (None, 3 0           mu[0][0]                         \n",
+      "distribution_lambda (Distributi ((None, 3), (None, 3 0           mu[0][0]                         \n",
       "                                                                 kappa[0][0]                      \n",
       "==================================================================================================\n",
       "Total params: 2,520,068\n",
@@ -248,27 +258,27 @@
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n",
       "Epoch 1/10\n",
-      "5965/5965 [==============================] - 92s 15ms/step - loss: -1.6179 - val_loss: -1.5599\n",
+      "39/39 [==============================] - 2s 62ms/step - loss: 1.1944\n",
       "Epoch 2/10\n",
-      "5965/5965 [==============================] - 76s 13ms/step - loss: -1.8533 - val_loss: -1.5239\n",
+      "39/39 [==============================] - 1s 27ms/step - loss: -0.7369\n",
       "Epoch 3/10\n",
-      "5965/5965 [==============================] - 80s 13ms/step - loss: -1.9368 - val_loss: -1.5994\n",
+      "39/39 [==============================] - 1s 28ms/step - loss: -1.0005\n",
       "Epoch 4/10\n",
-      "5965/5965 [==============================] - 76s 13ms/step - loss: -1.9923 - val_loss: -1.5986\n",
+      "39/39 [==============================] - 1s 26ms/step - loss: -0.9059\n",
       "Epoch 5/10\n",
-      "5965/5965 [==============================] - 80s 13ms/step - loss: -2.0351 - val_loss: -1.6044\n",
+      "39/39 [==============================] - 1s 26ms/step - loss: -1.2239\n",
       "Epoch 6/10\n",
-      "5965/5965 [==============================] - 79s 13ms/step - loss: -2.0690 - val_loss: -1.5896\n",
+      "39/39 [==============================] - 1s 25ms/step - loss: -1.2550\n",
       "Epoch 7/10\n",
-      "5965/5965 [==============================] - 80s 13ms/step - loss: -2.0994 - val_loss: -1.6013\n",
+      "39/39 [==============================] - 1s 28ms/step - loss: -1.2310\n",
       "Epoch 8/10\n",
-      "5965/5965 [==============================] - 80s 13ms/step - loss: -2.1229 - val_loss: -1.6648\n",
+      "39/39 [==============================] - 1s 29ms/step - loss: -1.0952\n",
       "Epoch 9/10\n",
-      "5965/5965 [==============================] - 78s 13ms/step - loss: -2.1454 - val_loss: -1.6230\n",
+      "39/39 [==============================] - 1s 22ms/step - loss: -1.3581\n",
       "Epoch 10/10\n",
-      "5965/5965 [==============================] - 81s 14ms/step - loss: -2.1656 - val_loss: -1.6171\n",
-      "Saving ../models/entrack_conditional/07371985349211c04c0aee0a48c84a9e/config.yml\n",
-      "Saving ../models/entrack_conditional/07371985349211c04c0aee0a48c84a9e/model.h5\n"
+      "39/39 [==============================] - 1s 31ms/step - loss: -1.4778\n",
+      "Saving ../models/entrack_conditional/789acc8e14db470e0696d17b76b9a0a6/config.yml\n",
+      "Saving ../models/entrack_conditional/789acc8e14db470e0696d17b76b9a0a6/model.h5\n"
      ]
     }
    ],
@@ -286,21 +296,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
