--- a/generate_conditional_samples_t.ipynb
+++ b/generate_conditional_samples_t.ipynb
@@ -68,7 +68,7 @@
     "    dwi_img = nib.funcs.as_closest_canonical(dwi_img)\n",
     "    dwi_aff = dwi_img.affine\n",
     "    dwi_affi = np.linalg.inv(dwi_aff)\n",
-    "    dwi_xyz2ijk = lambda r: dwi_affi.dot([r[0], r[1], r[2], 1])[:3]\n",
+    "    dwi_xyz2ijk = lambda r: dwi_affi.dot([r[0], r[1], r[2], 1])[:3] + 0.5\n",
     "    dwi = dwi_img.get_data()\n",
     "\n",
     "    tracts = trk_file.tractogram # fiber coordinates in rasmm\n",
@@ -205,21 +205,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
